--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
   </head>
 
   <body>
-    <header class="container">
-      <h1>CSS Box Model</h1>
+    <header>
+      <h1>CSS Typography</h1>
     </header>
-    <main class="container">
+    <main>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati odio
         placeat quo rem laborum nihil officia nesciunt autem, provident
         voluptatem, hic adipisci fugiat quam tempora labore nostrum itaque!
         Amet, dignissimos.
       </p>
-      <div class="circle"></div>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Your Name" />¨
+        <button>Submit</button>
+      </form>
     </main>
   </body>
 </html>
