Commented the form

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         voluptatem, hic adipisci fugiat quam tempora labore nostrum itaque!
         Amet, dignissimos.
       </p>
-      <form>
+      <!-- <form>
         <label for="name">Name:</label>
-        <input type="text" id="name" placeholder="Your Name" />¨
+        <input type="text" id="name" placeholder="Your Name" />
         <button>Submit</button>
-      </form>
+      </form> -->
     </main>
   </body>
 </html>
