--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -16,7 +23,10 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati odio
         placeat quo rem laborum nihil officia nesciunt autem, provident
         voluptatem, hic adipisci fugiat quam tempora labore nostrum itaque!
-        Amet, dignissimos.
+        Amet, dignissimos. Lorem ipsum dolor sit amet consectetur, adipisicing
+        elit. Nostrum ipsa impedit facere natus, facilis assumenda eaque, quos
+        alias aspernatur explicabo repellendus dolor cupiditate ut. Perspiciatis
+        delectus qui veritatis quisquam sed.
       </p>
       <!-- <form>
         <label for="name">Name:</label>
